tests/invalid/for_array_step_requires_integer.wio
fn Entry() -> i32 {
    let values: i32[] = [1, 2, 3];

    for value in values step 1.5 {
        return value;
    }

    return 0;
}
